Convert mdsal-netconf-connector to OSGi DS
This blueprint is extremely simple wiring, migrate it to Declarative
Services and also cleanup dependencies and code a bit.

JIRA: NETCONF-955
Change-Id: I54da9529206677f9d210d2db1cb7248a0ba0259b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>